updated requirements txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,365 +1,395 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: win-64
-_anaconda_depends=2019.03=py36_0
-_tflow_select=2.2.0=eigen
-absl-py=0.6.1=py36_0
-alabaster=0.7.11=py36_0
-anaconda=custom=py36h363777c_0
-anaconda-client=1.7.2=py36_0
-anaconda-project=0.8.2=py36_0
-appdirs=1.4.3=py36h28b3542_0
-asn1crypto=0.24.0=py36_0
-astor=0.7.1=py36_0
-astroid=2.0.4=py36_0
-astropy=4.0=pypi_0
-astroquery=0.3.9=py_1000
-atomicwrites=1.2.1=py36_0
-attrs=18.2.0=py36h28b3542_0
-automat=0.7.0=py36_0
-awsebcli=3.15.3=pypi_0
-babel=2.6.0=py36_0
-backcall=0.1.0=py36_0
-backports=1.0=py36_1
-backports.os=0.1.1=py36_0
-backports.shutil_get_terminal_size=1.0.0=py36_2
-bcrypt=3.1.7=pypi_0
-beautifulsoup4=4.6.3=py36_0
-bitarray=0.8.3=py36hfa6e2cd_0
-bkcharts=0.2=py36h7e685f7_0
-blas=1.0=mkl
-blaze=0.11.3=py36_0
-bleach=2.1.4=py36_0
-blimpy=1.5.0=pypi_0
-blinker=1.4=pypi_0
-blosc=1.14.4=he51fdeb_0
-bokeh=0.13.0=py36_0
-boto=2.49.0=py36_0
-botocore=1.12.199=pypi_0
-bottleneck=1.2.1=py36h452e1ab_1
-bs4=0.0.1=pypi_0
-bzip2=1.0.6=hfa6e2cd_5
-ca-certificates=2019.10.16=0
-cement=2.8.2=pypi_0
-certifi=2019.9.11=py36_0
-cffi=1.11.5=py36h74b6da3_1
-chardet=3.0.4=py36_1
-click=6.7=py36hec8c647_0
-cloudpickle=0.5.5=py36_0
-clyent=1.2.2=py36_1
-colorama=0.3.9=py36h029ae33_0
-comtypes=1.1.7=py36_0
-console_shortcut=0.1.1=3
-constantly=15.1.0=py36h28b3542_0
-contextlib2=0.5.5=py36he5d52c0_0
-cryptography=2.3.1=py36h74b6da3_0
-curl=7.61.0=h7602738_0
-cvxcanon=0.1.1=py36h830ac7b_0
-cvxopt=1.2.0=py36h685f9cb_0
-cycler=0.10.0=py36h009560c_0
-cython=0.28.5=py36h6538335_0
-cytoolz=0.9.0.1=py36hfa6e2cd_1
-dask=0.19.1=py36_0
-dask-core=0.19.1=py36_0
-dask-searchcv=0.2.0=py36_0
-datashape=0.5.4=py36_1
-decorator=4.3.0=py36_0
-defusedxml=0.5.0=py36_1
-distributed=1.23.1=py36_0
-docutils=0.14=py36h6012d8f_0
-emoji=0.5.2=pypi_0
-entrypoints=0.2.3=py36_2
-enum34=1.1.6=pypi_0
-et_xmlfile=1.0.1=py36h3d2d736_0
-fastcache=1.0.2=py36hfa6e2cd_2
-filelock=3.0.8=py36_0
-flask=1.0.2=py36_1
-flask-cors=3.0.6=py36_0
-flask-login=0.4.1=pypi_0
-flask-mail=0.9.1=pypi_0
-flask-sqlalchemy=2.4.0=pypi_0
-flask-user=1.0.1.5=pypi_0
-flask-wtf=0.14.2=pypi_0
-freetype=2.9.1=ha9979f8_1
-future=0.16.0=pypi_0
-gast=0.2.0=py36_0
-gcloud=0.17.0=pypi_0
-get_terminal_size=1.0.0=h38e98db_0
-gevent=1.3.6=py36hfa6e2cd_0
-glob2=0.6=py36_0
-glpk=4.65=hdc00fd2_2
-googleapis-common-protos=1.51.0=pypi_0
-greenlet=0.4.15=py36hfa6e2cd_0
-grpcio=1.14.1=py36h5c4b210_0
-gsl=2.4=hfa6e2cd_4
-gym=0.10.11=pypi_0
-h5py=2.8.0=py36h3bdd7fb_2
-hdf5=1.10.2=hac2f561_1
-hdf5plugin=2.1.2=pypi_0
-heapdict=1.0.0=py36_2
-html5lib=1.0.1=py36_0
-httplib2=0.17.0=pypi_0
-hyperlink=18.0.0=py36_0
-icc_rt=2017.0.4=h97af966_0
-icu=58.2=ha66f8fd_1
-idna=2.7=py36_0
-imageio=2.4.1=py36_0
-imagesize=1.1.0=py36_0
-importlib_metadata=0.23=py36_0
-incremental=17.5.0=py36_0
-intel-openmp=2019.0=118
-ipykernel=4.9.0=py36_1
-ipython=6.5.0=py36_0
-ipython_genutils=0.2.0=py36h3c5d0ee_0
-ipywidgets=7.4.1=py36_0
-isort=4.3.4=py36_0
-itsdangerous=0.24=py36_1
-jdcal=1.4=py36_0
-jedi=0.12.1=py36_0
-jinja2=2.10=py36_0
-jmespath=0.9.4=pypi_0
-jpeg=9b=hb83a4c4_2
-json5=0.8.5=py_0
-jsonschema=2.6.0=py36h7636477_0
-jupyter=1.0.0=py36_7
-jupyter-http-over-ws=0.0.7=pypi_0
-jupyter_client=5.2.3=py36_0
-jupyter_console=5.2.0=py36_1
-jupyter_core=4.4.0=py36_0
-jupyterlab=0.34.9=py36_0
-jupyterlab_launcher=0.13.1=py36_0
-jupyterlab_server=1.0.0=py_0
-jws=0.1.3=pypi_0
-keras=2.3.1=pypi_0
-keras-applications=1.0.6=py36_0
-keras-preprocessing=1.0.5=py36_0
-keyring=13.2.1=py36_0
-kiwisolver=1.0.1=py36h6538335_0
-krb5=1.16.1=h038dc86_6
-lazy-object-proxy=1.3.1=py36hfa6e2cd_2
-libcurl=7.61.0=h7602738_0
-libgpuarray=0.7.6=hfa6e2cd_0
-libiconv=1.15=h1df5818_7
-libopencv=3.4.2=h20b85fd_0
-libpng=1.6.34=h79bbb47_0
-libprotobuf=3.6.1=h7bd577a_0
-libpython=2.1=py36_0
-libsodium=1.0.16=h9d3ae62_0
-libssh2=1.8.0=hd619d38_4
-libtiff=4.0.9=h36446d0_2
-libxml2=2.9.8=hadb2253_1
-libxslt=1.1.32=hf6f1972_0
-llvmlite=0.24.0=py36h6538335_0
-locket=0.2.0=py36hfed976d_1
-lxml=4.2.5=py36hef2cd61_0
-lzo=2.10=h6df0209_2
-m2w64-binutils=2.25.1=5
-m2w64-bzip2=1.0.6=6
-m2w64-crt-git=5.0.0.4636.2595836=2
-m2w64-gcc=5.3.0=6
-m2w64-gcc-ada=5.3.0=6
-m2w64-gcc-fortran=5.3.0=6
-m2w64-gcc-libgfortran=5.3.0=6
-m2w64-gcc-libs=5.3.0=7
-m2w64-gcc-libs-core=5.3.0=7
-m2w64-gcc-objc=5.3.0=6
-m2w64-gmp=6.1.0=2
-m2w64-headers-git=5.0.0.4636.c0ad18a=2
-m2w64-isl=0.16.1=2
-m2w64-libiconv=1.14=6
-m2w64-libmangle-git=5.0.0.4509.2e5a9a2=2
-m2w64-libwinpthread-git=5.0.0.4634.697f757=2
-m2w64-make=4.1.2351.a80a8b8=2
-m2w64-mpc=1.0.3=3
-m2w64-mpfr=3.1.4=4
-m2w64-pkg-config=0.29.1=2
-m2w64-toolchain=5.3.0=7
-m2w64-tools-git=5.0.0.4592.90b8472=2
-m2w64-windows-default-manifest=6.4=3
-m2w64-winpthreads-git=5.0.0.4634.697f757=2
-m2w64-zlib=1.2.8=10
-mako=1.0.7=pypi_0
-markdown=3.0.1=py36_0
-markupsafe=1.0=py36hfa6e2cd_1
-matplotlib=3.2.0=pypi_0
-mccabe=0.6.1=py36_1
-menuinst=1.4.14=py36hfa6e2cd_0
-mistune=0.8.3=py36hfa6e2cd_1
-mkl=2018.0.3=1
-mkl-service=1.1.2=py36hb217b18_5
-mkl_fft=1.0.4=py36h1e22a9b_1
-mkl_random=1.0.1=py36h77b88f5_1
-more-itertools=4.3.0=py36_0
-mpmath=1.0.0=py36_2
-msgpack-python=0.5.6=py36he980bc4_1
-msys2-conda-epoch=20160418=1
-multipledispatch=0.6.0=py36_0
-nbconvert=5.4.0=py36_1
-nbformat=4.4.0=py36h3a5bc1b_0
-networkx=2.1=py36_0
-nltk=3.3.0=py36_0
-nose=1.3.7=py36_2
-notebook=5.6.0=py36_0
-numba=0.39.0=py36h830ac7b_0
-numexpr=2.6.8=py36h9ef55f4_0
-numpy=1.15.1=pypi_0
-numpydoc=0.8.0=py36_0
-oauth2client=3.0.0=pypi_0
-odo=0.5.1=py36h7560279_0
-olefile=0.46=py36_0
-opencv=3.3.1=py36h20b85fd_1
-opencv-contrib-python=4.1.2.30=pypi_0
-opencv-python=4.1.2.30=pypi_0
-openpyxl=2.5.6=py36_0
-openssl=1.0.2s=he774522_0
-packaging=17.1=py36_0
-pandas=0.23.4=py36h830ac7b_0
-pandoc=1.0.2=pypi_0
-pandocfilters=1.4.2=py36_1
-parso=0.3.1=py36_0
-partd=0.3.8=py36hc8e763b_0
-passlib=1.7.1=pypi_0
-path.py=11.1.0=py36_0
-pathlib2=2.3.2=py36_0
-pathspec=0.5.9=pypi_0
-patsy=0.5.0=py36_0
-pep8=1.7.1=py36_0
-pickleshare=0.7.4=py36h9de030f_0
-pillow=5.2.0=py36h08bbbbd_0
-pip=19.1.1=pypi_0
-pkginfo=1.4.2=py36_1
-pluggy=0.7.1=py36h28b3542_0
-ply=3.11=py36_0
-powershell_shortcut=0.0.1=2
-prometheus_client=0.3.1=py36h28b3542_0
-prompt_toolkit=1.0.15=py36h60b8f86_0
-protobuf=3.6.1=py36h33f27b4_0
-psutil=5.4.7=py36hfa6e2cd_0
-py=1.6.0=py36_0
-py-opencv=3.4.2=py36hc319ecb_0
-pyasn1=0.4.4=py36h28b3542_0
-pyasn1-modules=0.2.2=py36_0
-pycodestyle=2.4.0=py36_0
-pycosat=0.6.3=py36hfa6e2cd_0
-pycparser=2.18=py36_1
-pycrypto=2.6.1=py36hfa6e2cd_9
-pycryptodome=3.4.3=pypi_0
-pycurl=7.43.0.2=py36h74b6da3_0
-pydub=0.23.1=pypi_0
-pyflakes=2.0.0=py36_0
-pygame=1.9.6=pypi_0
-pyglet=1.3.2=pypi_0
-pygments=2.2.0=py36hb010967_0
-pygpu=0.7.6=py36h452e1ab_0
-pylint=2.1.1=py36_0
-pyodbc=4.0.24=py36h6538335_0
-pyopenssl=18.0.0=py36_0
-pyparsing=2.2.0=py36_1
-pypiwin32=223=pypi_0
-pyqt=5.9.2=py36h6538335_2
-pyreadline=2.1=py36_1
-pyrebase=3.0.27=pypi_0
-pyrsistent=0.14.11=py36he774522_0
-pysocks=1.6.8=py36_0
-pytables=3.4.4=py36he6f6034_0
-pytest=3.8.0=py36_0
-pytest-arraydiff=0.2=py36h39e3cac_0
-pytest-astropy=0.4.0=py36_0
-pytest-doctestplus=0.1.3=py36_0
-pytest-openfiles=0.3.0=py36_0
-pytest-remotedata=0.3.0=py36_0
-python=3.6.6=hea74fb7_0
-python-dateutil=2.7.3=py36_0
-python-jwt=2.0.1=pypi_0
-pytz=2018.5=py36_0
-pywavelets=1.0.0=py36h452e1ab_0
-pywin32=223=py36hfa6e2cd_1
-pywinpty=0.5.4=py36_0
-pyyaml=3.13=py36hfa6e2cd_0
-pyzmq=17.1.2=py36hfa6e2cd_0
-qt=5.9.6=vc14h1e9a669_2
-qtawesome=0.4.4=py36h5aa48f6_0
-qtconsole=4.4.1=py36_0
-qtpy=1.5.0=py36_0
-requests=2.11.1=pypi_0
-requests-futures=1.0.0=pypi_0
-requests-toolbelt=0.7.0=pypi_0
-rope=0.11.0=py36_0
-rsa=4.0=pypi_0
-ruamel_yaml=0.15.46=py36hfa6e2cd_0
-scikit-image=0.14.0=py36h6538335_1
-scikit-learn=0.19.2=py36heebcf9a_0
-scipy=1.4.1=pypi_0
-seaborn=0.9.0=py36_0
-semantic-version=2.5.0=pypi_0
-send2trash=1.5.0=py36_0
-service_identity=17.0.0=py36h28b3542_0
-setigen=1.2.1=pypi_0
-setuptools=40.2.0=py36_0
-simplegeneric=0.8.1=py36_2
-singledispatch=3.4.0.3=py36h17d0c80_0
-sip=4.19.8=py36h6538335_0
-six=1.11.0=py36_1
-snappy=1.1.7=h777316e_3
-snowballstemmer=1.2.1=py36h763602f_0
-sortedcollections=1.0.1=py36_0
-sortedcontainers=2.0.5=py36_0
-soupsieve=1.9.2=pypi_0
-sphinx=1.7.9=py36_0
-sphinx-rtd-theme=0.4.3=pypi_0
-sphinxcontrib=1.0=py36_1
-sphinxcontrib-websupport=1.1.0=py36_1
-spyder=3.3.1=py36_1
-spyder-kernels=0.2.6=py36_0
-sqlalchemy=1.2.11=py36hfa6e2cd_0
-sqlite=3.24.0=h7602738_0
-statsmodels=0.9.0=py36h452e1ab_0
-stem=1.7.1=pypi_0
-sympy=1.2=py36_0
-tblib=1.3.2=py36h30f5020_0
-tensorboard=1.12.0=py36he025d50_0
-tensorflow=1.12.0=eigen_py36h67ac661_0
-tensorflow-base=1.12.0=eigen_py36h45df0d8_0
-tensorflow-hub=0.1.1=pypi_0
-tensorflowjs=0.6.7=pypi_0
-termcolor=1.1.0=py36_1
-terminado=0.8.1=py36_1
-testpath=0.3.1=py36h2698cfe_0
-theano=1.0.3=py36_0
-tk=8.6.8=hfa6e2cd_0
-toolz=0.9.0=py36_0
-tornado=5.1=py36hfa6e2cd_0
-torrequest=0.1.0=pypi_0
-tqdm=4.26.0=py36h28b3542_0
-traitlets=4.3.2=py36h096827d_0
-turbo-seti=1.0.2=pypi_0
-twisted=18.7.0=py36hfa6e2cd_1
-typed-ast=1.1.0=py36hfa6e2cd_0
-unicodecsv=0.14.1=py36h6450c06_0
-urllib3=1.24.3=pypi_0
-vc=14.1=h0510ff6_4
-vs2015_runtime=14.15.26706=h3a45250_0
-wcwidth=0.1.7=py36h3d5aa90_0
-webencodings=0.5.1=py36_1
-werkzeug=0.14.1=py36_0
-wheel=0.31.1=py36_0
-widgetsnbextension=3.4.1=py36_0
-win_inet_pton=1.0.1=py36_1
-win_unicode_console=0.5=py36hcdbd4b5_0
-wincertstore=0.2=py36h7fe50ca_0
-winpty=0.4.3=4
-wrapt=1.10.11=py36hfa6e2cd_2
-wtforms=2.2.1=pypi_0
-xlrd=1.1.0=py36_1
-xlsxwriter=1.1.0=py36_0
-xlwings=0.11.8=py36_0
-xlwt=1.3.0=py36h1a4751e_0
-xz=5.2.4=h2fa13f4_4
-yaml=0.1.7=hc54c509_2
-zeromq=4.2.5=he025d50_1
-zict=0.1.3=py36_0
-zipp=0.6.0=py_0
-zlib=1.2.11=h8395fce_2
-zope=1.0=py36_1
-zope.interface=4.5.0=py36hfa6e2cd_0
-zstd=1.3.7=h508b16e_0
+absl-py==0.9.0
+alabaster==0.7.12
+albumentations==0.1.12
+altair==4.0.1
+asgiref==3.2.5
+astor==0.8.1
+astropy==4.0
+astunparse==1.6.3
+atari-py==0.2.6
+atomicwrites==1.3.0
+attrs==19.3.0
+audioread==2.1.8
+autograd==1.3
+Babel==2.8.0
+backcall==0.1.0
+backports.tempfile==1.0
+backports.weakref==1.0.post1
+beautifulsoup4==4.6.3
+bleach==3.1.3
+blimpy==1.5.0
+blis==0.4.1
+bokeh==1.4.0
+boto3==1.12.27
+botocore==1.15.27
+Bottleneck==1.3.2
+branca==0.4.0
+bs4==0.0.1
+bz2file==0.98
+CacheControl==0.12.6
+cachetools==3.1.1
+catalogue==1.0.0
+certifi==2019.11.28
+cffi==1.14.0
+chainer==6.5.0
+chardet==3.0.4
+click==7.1.1
+cloudpickle==1.3.0
+cmake==3.12.0
+cmdstanpy==0.4.0
+colorlover==0.3.0
+community==1.0.0b1
+contextlib2==0.5.5
+convertdate==2.2.0
+coverage==3.7.1
+coveralls==0.5
+crcmod==1.7
+cufflinks==0.17.3
+cupy-cuda101==6.5.0
+cvxopt==1.2.4
+cvxpy==1.0.28
+cycler==0.10.0
+cymem==2.0.3
+Cython==0.29.15
+daft==0.0.4
+dask==2.12.0
+dataclasses==0.7
+datascience==0.10.6
+decorator==4.4.2
+defusedxml==0.6.0
+descartes==1.1.0
+dill==0.3.1.1
+distributed==1.25.3
+Django==3.0.4
+dlib==19.18.0
+dm-sonnet==1.35
+docopt==0.6.2
+docutils==0.15.2
+dopamine-rl==1.0.5
+earthengine-api==0.1.216
+easydict==1.9
+ecos==2.0.7.post1
+editdistance==0.5.3
+en-core-web-sm==2.2.5
+entrypoints==0.3
+ephem==3.7.7.1
+et-xmlfile==1.0.1
+fa2==0.3.5
+fancyimpute==0.4.3
+fastai==1.0.60
+fastdtw==0.3.4
+fastprogress==0.2.2
+fastrlock==0.4
+fbprophet==0.6
+feather-format==0.4.0
+featuretools==0.4.1
+filelock==3.0.12
+firebase-admin==4.0.0
+fix-yahoo-finance==0.0.22
+Flask==1.1.1
+folium==0.8.3
+fsspec==0.6.3
+future==0.16.0
+gast==0.3.3
+GDAL==2.2.2
+gdown==3.6.4
+gensim==3.6.0
+geographiclib==1.50
+geopy==1.17.0
+gevent==1.4.0
+gin-config==0.3.0
+glob2==0.7
+google==2.0.3
+google-api-core==1.16.0
+google-api-python-client==1.7.12
+google-auth==1.7.2
+google-auth-httplib2==0.0.3
+google-auth-oauthlib==0.4.1
+google-cloud-bigquery==1.21.0
+google-cloud-core==1.0.3
+google-cloud-datastore==1.8.0
+google-cloud-firestore==1.6.2
+google-cloud-language==1.2.0
+google-cloud-storage==1.18.1
+google-cloud-translate==1.5.0
+google-colab==1.0.0
+google-pasta==0.2.0
+google-resumable-media==0.4.1
+googleapis-common-protos==1.51.0
+googledrivedownloader==0.4
+graph-nets==1.0.5
+graphviz==0.10.1
+greenlet==0.4.15
+grpcio==1.27.2
+gspread==3.0.1
+gspread-dataframe==3.0.4
+gunicorn==20.0.4
+gym==0.17.1
+h5py==2.10.0
+hdf5plugin==2.1.2
+HeapDict==1.0.1
+holidays==0.9.12
+html5lib==1.0.1
+httpimport==0.5.18
+httplib2==0.17.0
+httplib2shim==0.0.3
+humanize==0.5.1
+hyperopt==0.1.2
+ideep4py==2.0.0.post3
+idna==2.8
+image==1.5.28
+imageio==2.4.1
+imagesize==1.2.0
+imbalanced-learn==0.4.3
+imblearn==0.0
+imgaug==0.2.9
+importlib-metadata==1.5.0
+imutils==0.5.3
+inflect==2.1.0
+intel-openmp==2020.0.133
+intervaltree==2.1.0
+ipykernel==4.6.1
+ipython==5.5.0
+ipython-genutils==0.2.0
+ipython-sql==0.3.9
+ipywidgets==7.5.1
+itsdangerous==1.1.0
+jax==0.1.62
+jaxlib==0.1.42
+jdcal==1.4.1
+jedi==0.16.0
+jieba==0.42.1
+Jinja2==2.11.1
+jmespath==0.9.5
+joblib==0.14.1
+jpeg4py==0.1.4
+jsonschema==2.6.0
+jupyter==1.0.0
+jupyter-client==5.3.4
+jupyter-console==5.2.0
+jupyter-core==4.6.3
+kaggle==1.5.6
+kapre==0.1.3.1
+Keras==2.2.5
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
+keras-vis==0.4.1
+kfac==0.2.0
+kiwisolver==1.1.0
+knnimpute==0.1.0
+librosa==0.6.3
+lightgbm==2.2.3
+llvmlite==0.31.0
+lmdb==0.98
+lucid==0.3.8
+LunarCalendar==0.0.9
+lxml==4.2.6
+magenta==0.3.19
+Markdown==3.2.1
+MarkupSafe==1.1.1
+matplotlib==3.2.1
+matplotlib-venn==0.11.5
+mesh-tensorflow==0.1.12
+mido==1.2.6
+mir-eval==0.5
+missingno==0.4.2
+mistune==0.8.4
+mizani==0.6.0
+mkl==2019.0
+mlxtend==0.14.0
+more-itertools==8.2.0
+moviepy==0.2.3.5
+mpi4py==3.0.3
+mpmath==1.1.0
+msgpack==1.0.0
+multiprocess==0.70.9
+multitasking==0.0.9
+murmurhash==1.0.2
+music21==5.5.0
+natsort==5.5.0
+nbconvert==5.6.1
+nbformat==5.0.4
+networkx==2.4
+nibabel==3.0.2
+nltk==3.2.5
+notebook==5.2.2
+np-utils==0.5.12.1
+numba==0.47.0
+numexpr==2.7.1
+numpy==1.18.2
+nvidia-ml-py3==7.352.0
+oauth2client==4.1.3
+oauthlib==3.1.0
+okgrade==0.4.3
+opencv-contrib-python==4.1.2.30
+opencv-python==4.1.2.30
+openpyxl==2.5.9
+opt-einsum==3.2.0
+osqp==0.6.1
+packaging==20.3
+palettable==3.3.0
+pandas==0.25.3
+pandas-datareader==0.7.4
+pandas-gbq==0.11.0
+pandas-profiling==1.4.1
+pandocfilters==1.4.2
+parso==0.6.2
+pathlib==1.0.1
+patsy==0.5.1
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==7.0.0
+pip-tools==4.5.1
+plac==1.1.3
+plotly==4.4.1
+plotnine==0.6.0
+pluggy==0.7.1
+portpicker==1.3.1
+prefetch-generator==1.0.1
+preshed==3.0.2
+pretty-midi==0.2.8
+prettytable==0.7.2
+progressbar2==3.38.0
+prometheus-client==0.7.1
+promise==2.3
+prompt-toolkit==1.0.18
+protobuf==3.10.0
+psutil==5.4.8
+psycopg2==2.7.6.1
+ptyprocess==0.6.0
+py==1.8.1
+pyarrow==0.14.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycocotools==2.0.0
+pycparser==2.20
+pydata-google-auth==0.3.0
+pydot==1.3.0
+pydot-ng==2.0.0
+pydotplus==2.0.2
+PyDrive==1.3.1
+pyemd==0.5.1
+pyglet==1.5.0
+Pygments==2.1.3
+pygobject==3.26.1
+pymc3==3.7
+PyMeeus==0.3.7
+pymongo==3.10.1
+pymystem3==0.2.0
+PyOpenGL==3.1.5
+pyparsing==2.4.6
+pypng==0.0.20
+pyrsistent==0.16.0
+pysndfile==1.3.8
+PySocks==1.7.1
+pystan==2.19.1.1
+pytest==3.6.4
+python-apt==1.6.5+ubuntu0.2
+python-chess==0.23.11
+python-dateutil==2.8.1
+python-louvain==0.13
+python-rtmidi==1.4.0
+python-slugify==4.0.0
+python-utils==2.4.0
+pytz==2018.9
+PyWavelets==1.1.1
+PyYAML==3.13
+pyzmq==17.0.0
+qtconsole==4.7.1
+QtPy==1.9.0
+regex==2019.12.20
+requests==2.21.0
+requests-oauthlib==1.3.0
+resampy==0.2.2
+retrying==1.3.3
+rpy2==3.2.7
+rsa==4.0
+s3fs==0.4.0
+s3transfer==0.3.3
+scikit-image==0.16.2
+scikit-learn==0.22.2.post1
+scipy==1.4.1
+screen-resolution-extra==0.0.0
+scs==2.1.1.post2
+seaborn==0.10.0
+semantic-version==2.8.4
+Send2Trash==1.5.0
+setigen==1.2.3
+setuptools-git==1.2
+Shapely==1.7.0
+simplegeneric==0.8.1
+six==1.12.0
+sklearn==0.0
+sklearn-pandas==1.8.0
+smart-open==1.10.0
+snowballstemmer==2.0.0
+sortedcontainers==2.1.0
+spacy==2.2.4
+Sphinx==1.8.5
+sphinx-rtd-theme==0.4.3
+sphinxcontrib-websupport==1.2.1
+SQLAlchemy==1.3.15
+sqlparse==0.3.1
+srsly==1.0.2
+stable-baselines==2.2.1
+statsmodels==0.10.2
+sympy==1.1.1
+tables==3.4.4
+tabulate==0.8.7
+tblib==1.6.0
+tensor2tensor==1.14.1
+tensorboard==1.15.0
+tensorboardcolab==0.0.22
+tensorflow==1.15.2
+tensorflow-addons==0.8.3
+tensorflow-datasets==2.1.0
+tensorflow-estimator==1.15.1
+tensorflow-gan==2.0.0
+tensorflow-gcs-config==2.1.8
+tensorflow-hub==0.7.0
+tensorflow-metadata==0.21.1
+tensorflow-privacy==0.2.2
+tensorflow-probability==0.7.0
+termcolor==1.1.0
+terminado==0.8.3
+testpath==0.4.4
+text-unidecode==1.3
+textblob==0.15.3
+textgenrnn==1.4.1
+tflearn==0.3.2
+Theano==1.0.4
+thinc==7.4.0
+toolz==0.10.0
+torch==1.4.0
+torchsummary==1.5.1
+torchtext==0.3.1
+torchvision==0.5.0
+tornado==4.5.3
+tqdm==4.38.0
+traitlets==4.3.3
+tweepy==3.6.0
+typeguard==2.7.1
+typing==3.6.6
+typing-extensions==3.6.6
+tzlocal==1.5.1
+umap-learn==0.3.10
+uritemplate==3.0.1
+urllib3==1.24.3
+vega-datasets==0.8.0
+wasabi==0.6.0
+wcwidth==0.1.9
+webencodings==0.5.1
+Werkzeug==1.0.0
+wget==3.2
+widgetsnbextension==3.5.1
+wordcloud==1.5.0
+wrapt==1.12.1
+xarray==0.15.0
+xgboost==0.90
+xkit==0.0.0
+xlrd==1.1.0
+xlwt==1.3.0
+yellowbrick==0.9.1
+zict==2.0.0
+zipp==3.1.0
+zmq==0.0.0
